<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="monospace"
        android:text="@string/main_title"
        android:textColor="#673AB7"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDepart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/main_depart"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <EditText
        android:id="@+id/editTextDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/main_destination"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editTextDepart"
        app:layout_constraintTop_toBottomOf="@+id/editTextDepart" />

    <Button
        android:id="@+id/buttonValiderKit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#FBFBFB"
        android:backgroundTint="#FFFFFF"
        android:text="@string/main_valider"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDestination"
        app:rippleColor="#B62121" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:indeterminate="true"
        android:progressTint="#1936C8"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNomOption"
        android:layout_width="207dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/main_nom_option"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonValiderKit" />

    <EditText
        android:id="@+id/editTextPrixForfaitaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/main_prix_forfaitaire"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editTextNomOption"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomOption" />

    <EditText
        android:id="@+id/editTextNombreNuits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/main_nb_nuits"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editTextPrixForfaitaire"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrixForfaitaire" />

    <EditText
        android:id="@+id/editTextPrixParNuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/main_prix_nuit"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editTextNombreNuits"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombreNuits" />

    <Button
        android:id="@+id/buttonAjouterOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_ajouter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrixParNuit" />


</androidx.constraintlayout.widget.ConstraintLayout>